<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAlertDialog"
        style="@style/style_1"
        android:text="@string/alert_dialog" />

    <Button
        android:id="@+id/btnDatePickerDialog"
        style="@style/style_1"
        android:text="@string/date_picker_dialog" />

    <Button
        style="@style/style_1"
        android:id="@+id/btnTimePickerDialog"
        android:text="@string/time_picker_dialog"/>

    <Button
        style="@style/style_1"
        android:text="@string/progress_dialog"
        android:id="@+id/btnProgressDialog"/>

</LinearLayout>